--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -327,7 +327,6 @@ a.anchorjs-link:hover { text-decoration: none; }
 }
 
 .left-menu {
-  padding: 50px 0 0;
   width: 399px;
 }
 
@@ -358,10 +357,11 @@ label[for="nav-trigger"] {
   padding-top: 100px;
   padding-left: 5px;
   width: 10px;
-  height: 100%;
+  height: 80%;
   cursor: pointer;
   background-size: contain;
   background-color: #D4F0FF;
+  box-sizing: content-box;
 }
 
 label[for="nav-trigger"]:hover {
